--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
         >
     </HEAD>
     <body>
-    <div class="aaa">
+    <div class="header">
         <img src="./eisenhower-matrix.jpg">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-        <p id="top-section-for-adding-element-to-list">
+    <div class="main">
+        <p id="task-container">
             <label for="new-task">Add Item</label>
-            <div class="task-row-wrapper">
+            <div class="add-task">
                 <input id="new-task"class="task" type="text">
                 <button>Add</button>
             </div>
         </p>
         <h3>Todo</h3>
-        <ul id="incomplete-tasks">
+        <ul id="incomplete">
             <li>
                 <input type="checkbox">
                 <label class="task">Pay Bills</label>
                 <input type="text" class="task">
-                <button class="edit">Edit</button>
-                <button class="delete"><img src="./remove.svg"></button>
+                <button class="edit-btn">Edit</button>
+                <button class="delete-btn"><img src="./remove.svg"></button>
             </li>
             <li class="edit-mode">
                 <input type="checkbox">
@@ -40,20 +40,20 @@
                     value="Go Shopping" 
                     class="task"
                 >
-                <button class="edit">Save</button>
-                <button class="delete">
+                <button class="edit-btn">Save</button>
+                <button class="delete-btn">
                     <img src="./remove.svg">
                 </button>
             </li>
         </ul>
         <h3>Completed</h3>
-        <ul id="completed-tasks">
+        <ul id="completed">
             <li>
                 <input type="checkbox" checked>
                 <label class="task">See the Doctor</label>
                 <input type="text" class="task">
-                <button class="edit">Edit</button>
-                <button class="delete">
+                <button class="edit-btn">Edit</button>
+                <button class="delete-btn">
                     <img src="./remove.svg">
                 </button>
             </li>
