--- a/index.html
+++ b/index.html
@@ -11,54 +11,58 @@
         >
     </HEAD>
     <body class="page">
-    <div class="header">
+    <header class="header">
         <img src="./eisenhower-matrix.jpg">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-        <p id="task-container">
+    </header>
+    <main class="main">
+        <section id="task-container">
             <label for="new-task">Add Item</label>
             <div class="add-task">
                 <input id="new-task"class="task" type="text">
                 <button>Add</button>
             </div>
-        </p>
-        <h3 class="section-title">Todo</h3>
-        <ul id="incomplete">
-            <li class="task-li">
-                <input type="checkbox">
-                <label class="task">Pay Bills</label>
-                <input type="text" class="task editing">
-                <button class="edit-btn">Edit</button>
-                <button class="delete-btn"><img src="./remove.svg"></button>
-            </li>
-            <li class="edit-mode task-li">
-                <input type="checkbox">
-                <label class="task">Go Shopping</label>
-                <input 
-                    type="text" 
-                    value="Go Shopping" 
-                    class="task"
-                >
-                <button class="edit-btn">Save</button>
-                <button class="delete-btn">
-                    <img src="./remove.svg">
-                </button>
-            </li>
-        </ul>
-        <h3 class="section-title">Completed</h3>
-        <ul id="completed">
-            <li class="task-li">
-                <input type="checkbox" checked>
-                <label class="task">See the Doctor</label>
-                <input type="text" class="task editing">
-                <button class="edit-btn">Edit</button>
-                <button class="delete-btn">
-                    <img src="./remove.svg">
-                </button>
-            </li>
-        </ul>
-    </div>
+        </section>
+        <section>
+            <h3 class="section-title">Todo</h3>
+            <ul id="incomplete">
+                <li class="task-li">
+                    <input type="checkbox">
+                    <label class="task">Pay Bills</label>
+                    <input type="text" class="task editing">
+                    <button class="edit-btn">Edit</button>
+                    <button class="delete-btn"><img src="./remove.svg"></button>
+                </li>
+                <li class="edit-mode task-li">
+                    <input type="checkbox">
+                    <label class="task">Go Shopping</label>
+                    <input 
+                        type="text" 
+                        value="Go Shopping" 
+                        class="task"
+                    >
+                    <button class="edit-btn">Save</button>
+                    <button class="delete-btn">
+                        <img src="./remove.svg">
+                    </button>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3 class="section-title">Completed</h3>
+            <ul id="completed">
+                <li class="task-li">
+                    <input type="checkbox" checked>
+                    <label class="task">See the Doctor</label>
+                    <input type="text" class="task editing">
+                    <button class="edit-btn">Edit</button>
+                    <button class="delete-btn">
+                        <img src="./remove.svg">
+                    </button>
+                </li>
+            </ul>
+        </section>   
+    </main>
     <script src="app.js"></script>
     </body>
 </html>
