--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </HEAD>
     <body class="page">
     <header class="header">
-        <img src="./eisenhower-matrix.jpg">
+        <img src="./eisenhower-matrix.jpg" alt="main poster">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -31,7 +31,9 @@
                     <label class="task">Pay Bills</label>
                     <input type="text" class="task editing">
                     <button class="edit-btn">Edit</button>
-                    <button class="delete-btn"><img src="./remove.svg"></button>
+                    <button class="delete-btn">
+                        <img src="./remove.svg" alt="remove">
+                    </button>
                 </li>
                 <li class="edit-mode task-li">
                     <input type="checkbox">
@@ -43,7 +45,7 @@
                     >
                     <button class="edit-btn">Save</button>
                     <button class="delete-btn">
-                        <img src="./remove.svg">
+                        <img src="./remove.svg" alt="remove">
                     </button>
                 </li>
             </ul>
@@ -57,7 +59,7 @@
                     <input type="text" class="task editing">
                     <button class="edit-btn">Edit</button>
                     <button class="delete-btn">
-                        <img src="./remove.svg">
+                        <img src="./remove.svg" alt="remove">
                     </button>
                 </li>
             </ul>
