--- a/index.html
+++ b/index.html
@@ -9,57 +9,57 @@
             media="screen" 
             charset="utf-8"
         >
-    </HEAD>
+    </head>
     <body class="page">
     <header class="header">
-        <img src="./eisenhower-matrix.jpg" alt="main poster">
-        <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+        <img src="./eisenhower-matrix.jpg">
+        <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-        <section id="add-task">
-            <label for="section-title add-task__label">Add Item</label>
-            <div class="task-wrapper">
-                <input id="new-task"class="input-field" type="text">
-                <button class="btn-primary">Add</button>
+        <section class="main__container">
+            <label for="new-task">Add Item</label>
+            <div class="main__container__add-task">
+                <input id="new-task"class="task" type="text">
+                <button>Add</button>
             </div>
         </section>
         <section>
-            <h3 class="section-title">Todo</h3>
-            <ul id="incomplete" class="tasks-list">
-                <li class="tasks-list__item">
-                    <input class="tasks-list__checkbox" type="checkbox">
-                    <label class="tasks-list__label">Pay Bills</label>
-                    <input type="text" class="tasks-list__input input-field">
-                    <button class="btn-primary edit-btn">Edit</button>
-                    <button class="btn-primary delete-btn">
-                        <img src="./remove.svg" alt="remove">
+            <h3 class="section__title">Todo</h3>
+            <ul class="main__incomplete">
+                <li class="main__incomplete__task-li">
+                    <input type="checkbox">
+                    <label class="task">Pay Bills</label>
+                    <input type="text" class="task editing">
+                    <button class="edit-btn">Edit</button>
+                    <button class="delete-btn">
+                        <img src="./remove.svg">
                     </button>
                 </li>
-                <li class="tasks-list__item edit--mode">
-                    <input class="tasks-list__checkbox" type="checkbox">
-                    <label class="tasks-list__label">Go Shopping</label>
+                <li class="main__incomplete__task-li edit-mode">
+                    <input type="checkbox">
+                    <label class="task">Go Shopping</label>
                     <input 
                         type="text" 
                         value="Go Shopping" 
-                        class="tasks-list__input input-field"
+                        class="task"
                     >
-                    <button class="btn-primary edit-btn">Save</button>
-                    <button class="btn-primary delete-btn">
-                        <img src="./remove.svg" alt="remove">
+                    <button class="edit-btn">Save</button>
+                    <button class="delete-btn">
+                        <img src="./remove.svg">
                     </button>
                 </li>
             </ul>
         </section>
         <section>
             <h3 class="section-title">Completed</h3>
-            <ul id="completed" class="tasks-list task--completed">
-                <li class="tasks-list__item">
-                    <input class="tasks-list__checkbox" type="checkbox" checked>
-                    <label class="tasks-list__label">See the Doctor</label>
-                    <input type="text" class="tasks-list__input input-field">
-                    <button class="btn-primary edit-btn">Edit</button>
-                    <button class="btn-primary delete-btn">
-                        <img src="./remove.svg" alt="remove">
+            <ul class="main__completed">
+                <li class="main__completed__task-li">
+                    <input type="checkbox" checked>
+                    <label class="task">See the Doctor</label>
+                    <input type="text" class="task editing">
+                    <button class="edit-btn">Edit</button>
+                    <button class="delete-btn">
+                        <img src="./remove.svg">
                     </button>
                 </li>
             </ul>
