--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="main__incomplete__task-li">
                         <input type="checkbox">
                         <label class="task">Pay Bills</label>
-                        <input type="text" class="task editing">
+                        <input type="text" class="task__editing">
                         <button class="edit-btn">Edit</button>
                         <button class="delete-btn">
                             <img src="./remove.svg">
@@ -56,7 +56,7 @@
                     <li class="main__completed__task-li">
                         <input type="checkbox" checked>
                         <label class="task">See the Doctor</label>
-                        <input type="text" class="task editing">
+                        <input type="text" class="task__editing">
                         <button class="edit-btn">Edit</button>
                         <button class="delete-btn">
                             <img src="./remove.svg">
